...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/card_unmask_input"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="4"
...
