...
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/autofill_dialog_footer_height"
            android:background = "?android:attr/selectableItemBackground"
            android:visibility="gone"/>
        <Button
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/autofill_dialog_footer_height"
            android:background = "?android:attr/selectableItemBackground"
            android:visibility="gone"/>
    </LinearLayout>
...
